 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-259: allow store to overwrite existing directroy (nezihyigitbasi via daijy)

PIG-2672: Optimize the use of DistributedCache (aniket486)

PIG-3238: Pig current releases lack a UDF Stuff(). This UDF deletes a specified length of characters
 and inserts another set of characters at a specified starting point (nezihyigitbasi via daijy)

PIG-3299: Provide support for LazyOutputFormat to avoid creating empty files (lbendig via daijy)

PIG-3642: Direct HDFS access for small jobs (fetch) (lbendig via cheolsoo)

PIG-3730: Performance issue in SelfSpillBag (rajesh.balamohan via rohini)

PIG-3654: Add class cache to PigContext (tmwoodruff via daijy)

PIG-3463: Pig should use hadoop local mode for small jobs (aniket486)

PIG-3573: Provide StoreFunc and LoadFunc for Accumulo (elserj via daijy)

PIG-3653: Add support for pre-deployed jars (tmwoodruff via daijy)

PIG-3645: Move FileLocalizer.setR() calls to unit tests (cheolsoo)

PIG-3637: PigCombiner creating log spam (rohini)

PIG-3632: Add option to configure cacheBlocks in HBaseStorage (rohini)

PIG-3619: Provide XPath function (Saad Patel via gates)

PIG-3590: remove PartitionFilterOptimizer from trunk (aniket486)

PIG-3580: MIN, MAX and AVG functions for BigDecimal and BigInteger (harichinnan via cheolsoo)

PIG-3569: SUM function for BigDecimal and BigInteger (harichinnan via rohini)

PIG-3505: Make AvroStorage sync interval take default from io.file.buffer.size (rohini)

PIG-3563: support adding archives to the distributed cache (jdonofrio via cheolsoo)
