@@ -244,6 +244,10 @@ pig.location.check.strict=false
 # jobs with smaller input data size to run in local mode
 # pig.auto.local.input.maxbytes=100000000
 
+# Set this option to overwrite the sample size of RandomeSampleLoader for
+# order-by. The default value is 100 rows per task.
+# pig.random.sampler.sample.size=100
+
 # When enabled, jobs won't create empty part files if no output is written. In this case
 # PigOutputFormat will be wrapped with org.apache.hadoop.mapreduce.lib.output.LazyOutputFormat.
 # pig.output.lazy=true
